--- a/requirements.txt
+++ b/requirements.txt
@@ -212,10 +212,6 @@ statsmodels==0.10.1
 sympy==1.4
 tables==3.5.2
 tblib==1.4.0
-tensorboard==2.2.2
-tensorboard-plugin-wit==1.6.0.post3
-tensorflow==2.2.0
-tensorflow-estimator==2.2.0
 termcolor==1.1.0
 terminado==0.8.2
 testpath==0.4.2
@@ -239,6 +235,7 @@ widgetsnbextension==3.5.1
 win-inet-pton==1.1.0
 win-unicode-console==0.5
 wincertstore==0.2
+wordcloud
 wrapt==1.11.2
 xlrd==1.2.0
 XlsxWriter==1.2.1
