--- a/requirements.txt
+++ b/requirements.txt
@@ -38,10 +38,10 @@ matplotlib==3.1.1
 nbconvert==5.6.0
 nbformat==4.4.0
 networkx==2.3
-nltk.corpus>=3.4.5
-nltk.stem.porter>=3.4.5
-nltk.stem>=3.4.5
-nltk.sentiment.vader>=3.4.5
+nltk.corpus
+nltk.stem.porter
+nltk.stem
+nltk.sentiment.vader
 nose==1.3.7
 numba==0.45.1
 numexpr==2.7.0
