--- a/requirements.txt
+++ b/requirements.txt
@@ -38,9 +38,7 @@ matplotlib==3.1.1
 nbconvert==5.6.0
 nbformat==4.4.0
 networkx==2.3
-nltk.corpus>=3.5.0
-nltk.stem.porter>=3.5.0
-nltk.stem>=3.5.0
+nltk==3.5
 nltk.sentiment.vader>=3.5.0
 nose==1.3.7
 numba==0.45.1
